@@ -279,7 +279,7 @@ class Sit_schedule : public Schedule
 public:
 	Sit_schedule(Actor *n, Game_object *ch = 0);
 	virtual void now_what();	// Now what should NPC do?
-	static void set_action(Actor *actor, Game_object *chairobj,
+	static bool set_action(Actor *actor, Game_object *chairobj = 0,
 					int delay = 0);
 	};
 
